--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,8 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "3.2.26",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
@@ -23,18 +24,22 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^27.0.6",
     "cypress": "^9.7.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.15.1",
     "jest": "^27.0.5",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
+    "vue-eslint-parser": "^9.3.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
